--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ env_logger = "0.9"
 log = "0.4"
 wgpu = "0.12"
 pollster = "0.2"
-bytemuck = {version = "1.7.3", features = ["derive"]}
+encase = {version = "0.1.3", features =["nalgebra"]}
+nalgebra = "0.30.1"
