--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ winit = "0.26"
 cgmath = "0.18"
 env_logger = "0.9"
 log = "0.4"
-wgpu = "0.12"
+wgpu = "0.12" # { git = "https://github.com/gfx-rs/wgpu", rev = "b52d68d" }
 pollster = "0.2"
-encase = {version = "0.1.3", features =["nalgebra"]}
-nalgebra = "0.30.1"
+crevice = {version = "0.8.0"}
+mint = "0.5"
