enable fft audio for windows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,8 @@ crevice = {version = "0.13.0"}
 mint = "0.5"
 nanorand = "0.7"
 clap = { version = "4.2.7", features = ["derive"] }
-alsa = "0.7.0"
-hound = "3.5.0"
 rustfft = "6.1.0"
+cpal = "0.15.2"
 
 [dependencies.naga]
 git = "https://github.com/gfx-rs/naga"
