--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ clap = { version = "4.3.21", features = ["derive"] }
 cpal = "0.15.2"
 spectrum-analyzer = "1.5.0"
 tokio = { version = "1.34.0", features = ["sync"] }
+async-trait = "0.1.74"
 
 [dependencies.naga]
 git = "https://github.com/gfx-rs/naga"
