detect in background

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-image = "0.24"
 winit = "0.29"
 env_logger = "0.10"
 log = "0.4"
@@ -20,6 +19,17 @@ cpal = "0.15.2"
 spectrum-analyzer = "1.5.0"
 tokio = { version = "1.34.0", features = ["sync"] }
 async-trait = "0.1.74"
+image = { version = "0.24.9", features = ["default"]}
+imageproc = "0.23.0"
+itertools = "0.12.1"
+
+[dependencies.nokhwa]
+# Use the native input backends, enable WGPU integration
+features = ["input-native", "decoding"]
+git = "https://github.com/l1npengtul/nokhwa.git" 
+branch = "0.10"
+
+
 
 [dependencies.naga]
 git = "https://github.com/gfx-rs/naga"
