--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,8 @@
 [build]
-# rustflags = [ "--cfg=web_sys_unstable_apis" ]
-# rustdocflags = [ "--cfg=web_sys_unstable_apis" ]
+
+[target.wasm32-unknown-unknown]
+rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals", "--cfg=web_sys_unstable_apis"]
+rustdocflags = [ "--cfg=web_sys_unstable_apis" ]
+
+[unstable]
+build-std = ["panic_abort", "std"]
