--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Check the format
       run: cargo fmt --all -- --check
     - name: Run clippy
-      run: cargo clippy --workspace --release --all-targets --all-features -- -D warnings
+      run: cargo clippy --workspace --release --all-targets --all-features
